hphp/hack/test/typecheck/undefined_class_subtype_bad.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

function bong(C<int> $x): C<string> {
  return $x;
}
